[project]
name = "finviz-data"
version = "1.2.1"
description = "Simple package to get data from finviz.com"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Dennis Iversen", email = "dennis.iversen@gmail.com" },
]
dependencies = [
    "beautifulsoup4==4.12.2",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "curl-cffi==0.7.4",
    "idna==3.6",
    "requests==2.31.0",
    "soupsieve==2.5",
    "urllib3==2.1.0",
]

[project.urls]
Repository = "https://github.com/diversen/finviz-data"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finviz_data*"]
