[project]
name = "finviz-data"
version = "1.3.0"
description = "Simple package to get data from finviz.com"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Dennis Iversen", email = "dennis.iversen@gmail.com" },
]
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "curl-cffi>=0.7,<1",
]

[project.urls]
Repository = "https://github.com/diversen/finviz-data"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finviz_data*"]
